# QSingleInstanceCheck

./: .gitignore  CMakeLists.txt  README.md  config.qdocconf
.github/workflows/: tests.yml
coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage/QSingleInstanceCheck/: QSingleInstanceCheck.h.func-c.html  QSingleInstanceCheck.h.func.html  QSingleInstanceCheck.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
docs/: qsingleinstancecheck-members.html  qsingleinstancecheck-module.html  qsingleinstancecheck.html  qsingleinstancecheck.index
include/: index.qdoc.test
include/QSingleInstanceCheck/: QSingleInstanceCheck.h
tests/: tst_testqsingleinstancecheck.cpp
